<resources>
    <string name="app_name">Password Manager</string>
    <string name="title_home">Home</string>
    <string name="title_generate">Generate</string>
    <string name="title_create">Create</string>
    <string name="main_info">Main Information</string>
    <string name="website">Website</string>
    <string name="title">Title</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="notes">Notes</string>
    <string name="generate_password">Generate password</string>
    <string name="password_length">Password length</string>
    <string name="uppercase_letters">Uppercase letters (A-Z)</string>
    <string name="lowercase_letters">Lowercase letters (a-z)</string>
    <string name="digits_0_9">Digits (0–9)</string>
    <string name="special_symbols">Special symbols</string>
    <string name="list_special_symbols"><![CDATA[~!@#$%^&*+-/.,{}[]()]]></string>
    <string name="create">Готово</string>
    <string name="empty_field">Необходимо заполнить поля</string>
    <string name="delete_note">Удалить запись</string>
    <string name="save_changes">Сохранить изменения</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
