<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_generate"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/generate_password_txt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/password"
            android:textColor="@android:color/black"
            app:autoSizeMaxTextSize="40sp"
            app:autoSizeMinTextSize="20sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />

        <ImageButton
            android:id="@+id/update_password_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="30dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/generate_password"
            android:src="@drawable/ic_refresh_black_24dp"
            android:tint="@color/colorPrimary" />

        <include layout="@layout/line" />


        <TextView
            style="@style/CheckBoxStyle"
            android:text="@string/password_length" />

        <Spinner
            android:id="@+id/password_length_spn"
            style="@style/CheckBoxStyle" />

        <CheckBox
            android:id="@+id/uppercase_ckb"
            style="@style/CheckBoxStyle"
            android:text="@string/uppercase_letters" />

        <CheckBox
            android:id="@+id/lowercase_ckb"
            style="@style/CheckBoxStyle"
            android:text="@string/lowercase_letters" />

        <CheckBox
            android:id="@+id/digit_ckb"
            style="@style/CheckBoxStyle"
            android:text="@string/digits_0_9" />

        <TextView
            style="@style/CheckBoxStyle"
            android:text="@string/special_symbols" />

        <CheckBox
            android:id="@+id/special_symbol_ckb"
            style="@style/CheckBoxStyle"
            android:layout_marginBottom="12dp"
            android:text="@string/list_special_symbols" />

    </LinearLayout>
</ScrollView>